Feature: Orders. Tax rates. Counties.
now orders contains fields related to composite taxes and taxed amount with total amount. To count those taxes app uses new Services: CountyGeoLoader to create counties polygons and validate order drop-off point. TaxRateService to discover tax rate